[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psutil>=7.1.3",
    "subprocess-tee>=0.4.2",
    "tabulate>=0.10.0",
    "tqdm>=4.67.1",
]
